# cr8s

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket.toml.sample  Rocket.toml.template  docker-compose.yml  rustfrm.toml
.cargo/: audit.toml
.github/workflows/: rust.new.yml  rust.yml
docs/: CR8S - Architecture.md  CR8S - Database Schema.md  container-usage-guide.md  development.md  docker-usage.md  native-workflow.md
migrations/0000_initial_setup/: up.sql
migrations/0010_create_app_user/: up.sql
migrations/0020_create_author/: down.sql  up.sql
migrations/0030_create_crate/: down.sql  up.sql
migrations/0040_create_role/: down.sql  up.sql
migrations/0050_create_user_roles/: down.sql  up.sql
migrations/2023-11-18-190848_create_user_roles/: up.sql
scripts/: .cr8s_env  bootstrap.sh  build-images.sh  build-verification-test.sh  common.sh  dev-test-setup.sh  docker-cleanup.sh  make-rust-dev.sh  quickstart.sh  run-ci-tests  shell.sh  start-backend.sh  start.sh  stop.sh
scripts/Archive/: bootstrap-db.sh  start.sh
scripts/dev-ci/: build-images.sh  generate-rocket-toml.sh
scripts/sql/: db-init.sql  load-defaults.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  models.rs  repositories.rs  test_support.rs
src/auth/: mock_password.rs  mod.rs  password.rs  tests.rs
src/domain/: README.md  app_user.rs  author.rs  authorization.rs  cache.rs  health.rs  krate.rs  mail.rs  mod.rs  password.rs  role_code.rs
src/mail/: html_mailer.rs  mod.rs
src/mock/: mock_password.rs  mock_role.rs  mock_user_role.rs  mod.rs
src/repository/: app_user_sqlx.rs  author_sqlx.rs  crate_sqlx.rs  database.rs  env.rs  health_check.rs  mod.rs  redis_cache.rs  role_code_mapping.rs  role_code_sqlx.rs
src/rocket_routes/: authorization.rs  authors.rs  crates.rs  guards.rs  health.rs  mod.rs  rustaceans.rs  support.rs
src/tests/: authorization.rs  crates.rs  domain_mail_visiblity.rs  guards.rs  lib.rs  rustaceans.rs
src/tests/test_utils/: common.rs  macros.rs  mod.rs
templates/: README.md
tests/: README.md  authorization.rs  cli_integration.rs  crates.rs  lib.rs  rustaceans.rs  server_integration.rs
tests/common/: macros.rs  mod.rs
