[package]
name = "cr8s"
default-run = "server"
version = "0.5.0"
edition = "2021"
authors = ["John Basrai <john@basrai.dev>"]
description = "Backend service for the cr8s project (Rocket + SQLx + Redis)"

[dependencies]
anyhow              = "1.0.98"
argon2              = "0.5"
async-trait         = "0.1"
chrono              = { version = "0.4", features = ["serde"] }
clap                = { version = "4.5", features = ["derive"] }
dotenvy             = "0.15"
lettre              = "0.11"
once_cell           = "1.21"
rand                = "0.9"
reqwest             = { version = "0.12", features = ["json", "blocking"] }
rocket              = { version = "0.5.0-rc.3", features = ["json"] }
serde               = "1.0"
serde_json          = "1.0"
tera                = "1.20"
thiserror           = "2.0"
tokio               = { version = "1",   features  = ["macros", "rt", "rt-multi-thread"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
uuid                = { version = "1", features = ["v4"] }

# These next three dependencies are tightly coupled and must be pinned & kept in sync.
deadpool-redis   = { version = "=0.15.1", features = ["rt_tokio_1"] }
rocket_db_pools  = { version = "=0.2.0", features = ["deadpool_redis"] }
redis            = { version = "=0.25.4", default-features = false, features = ["aio"] }
##

# SQLx - postgres-only configuration  
[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"]
default-features = false  # This is the key - excludes MySQL, SQLite, etc.

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"

[dev-dependencies]
